# iconvwadw-rs

./: .gitignore  Cargo.toml  Makefile  README.md  meson.build  native.ini
build-aux/: dist-vendor.sh  iconvwadw-win.nsi
data/desktop/: io.github.rsvzz.iconvwadw.desktop
data/metainfo/: io.github.rsvzz.iconvwadw.metainfo.xml
data/ui/: about.cmb  about.ui  main.cmb  main.ui  view_data.cmb  view_data.ui
debian/: changelog  control  files  install  rules
snap/: snapcraft.yaml
src/: main.rs  meson.build
src/model/: icon_item.rs  load_icon.rs  load_path.rs  load_svg.rs  mod.rs  path_model.rs
