[package]
name = "iconvwadw"
version = "0.1.30"
edition = "2024"

[dependencies]
gtk = {version= "0.10.3", package="gtk4", features=["v4_14"]}
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"]} 
rsvg = {version = "=2.58", package = "librsvg"}
cairo = {version = "=0.19", package = "cairo-rs"}